fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -723,6 +723,10 @@ textarea {
 	color: #57b7d7;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0 1em 0 0;
 	padding: 0;
